--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "v-calendar": "^2.3.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue2-filters": "^0.13.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
